--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bella Napoli</title>
-    <!-- El link con CSS -->
-    <link rel="stylesheet" href="./css/style.css">
     <!-- El link de Google Fonts (Pacifico) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +11,8 @@
     <!-- El link de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" href="../img/pizza-logo.png" type="image/x-icon">
+    <!-- El link con CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Inicio del header -->
@@ -32,16 +32,16 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/productos.html">Productos</a>
+                            <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/faq.html">FAQ</a>
+                            <a class="nav-link" href="./faq.html">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -52,25 +52,19 @@
     <!-- Inicio del main -->
     <main>
         <section class="contact container">
-            <h2>¿Dónde nos encontramos y nuestros horarios?</h2>
+            <h1>¿Dónde nos encontramos y nuestros horarios?</h1>
             <p>En calle Roma 246 y de 15hs a 21hs</p>
             <div class="contact-content">
-                <h3>E-mail</h3>
-                <form action="">
+                <h2>E-mail</h2>
                     <input type="email" placeholder="Escribe tu correo">
-                </form>
             </div>
             <div class="contact-content">
-                <h3>Telefono</h3>
-                <form action="">
+                <h2>Telefono</h2>
                     <input type="number" placeholder="Escribe tu número">
-                </form>
             </div>
             <div class="contact-content">
-                <h3>Manda tu opinion</h3>
-                <form action="">
+                <h2>Manda tu opinion</h2>
                     <textarea name="your-message" cols="20" rows="4" class="wpcf7-form-control wpcf7-textarea form-control input-club" aria-invalid="false" placeholder="MENSAJE" style="height: 104px;"></textarea>
-                </form>
             </div>
             <div class="btn-contact">
                 <input type="submit" value="ENVIAR" class="wpcf7-form-control wpcf7-submit">
@@ -81,11 +75,11 @@
     <!-- Inicio del footer -->
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-          <li class="nav-item"><a href="../pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-          <li class="nav-item"><a href="../pages/productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
-          <li class="nav-item"><a href="../pages/faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-          <li class="nav-item"><a href="../pages/nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+            <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+            <li class="nav-item"><a href="./productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
+            <li class="nav-item"><a href="./faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="./nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
       </footer>
