--- a/pages/faq.html
+++ b/pages/faq.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bella Napoli</title>
-    <!-- El link con CSS -->
-    <link rel="stylesheet" href="./css/style.css">
     <!-- El link de Google Fonts (Pacifico) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +11,10 @@
     <!-- El link de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" href="../img/pizza-logo.png" type="image/x-icon">
+    <!-- El link con CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
-<body>
+<body class="faq">
     <!-- Inicio del header -->
     <header class="header">
         <nav class="navbar bg-body-tertiary" data-bs-theme="dark">
@@ -32,16 +32,16 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/productos.html">Productos</a>
+                            <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/faq.html">FAQ</a>
+                            <a class="nav-link" href="./faq.html">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -51,6 +51,7 @@
     <!-- Fin del header -->
     <!-- Inicio del main -->
     <main>
+        <h1>FAQ</h1>
         <section>
             <div>
                 <ol>
@@ -74,14 +75,14 @@
     </main>
     <!-- Fin del main -->
     <!-- Inicio el footer -->
-    <footer class="py-3 my-4">
+    <footer class="py-3 my-4 footer-faq" data-bs-theme="dark">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-          <li class="nav-item"><a href="../pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-          <li class="nav-item"><a href="../pages/productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
-          <li class="nav-item"><a href="../pages/faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-          <li class="nav-item"><a href="../pages/nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
-        </ul>
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+            <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+            <li class="nav-item"><a href="./productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
+            <li class="nav-item"><a href="./faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="./nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
+          </ul>
         <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
       </footer>
     <!-- Fin del footer -->
