--- a/pages/nosotros.html
+++ b/pages/nosotros.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bella Napoli</title>
-    <!-- El link con CSS -->
-    <link rel="stylesheet" href="../css/style.css">
     <!-- El link de Google Fonts (Pacifico) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +11,8 @@
     <!-- El link de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" href="../img/pizza-logo.png" type="image/x-icon">
+    <!-- El link con CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Inicio del header -->
@@ -27,23 +27,21 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-                    <ul class="nav justify-content-end links-inicio">
-                        <li class="nav-item">
-                            <a class="nav-link" href="../index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="../pages/faq.html">FAQ</a>
-                        </li>
-                    </ul>
+                    <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./productos.html">Productos</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./nosotros.html">Nosotros</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./contacto.html">Contacto</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="./faq.html">FAQ</a>
+                    </li>
                 </div>
             </div>
         </nav>
@@ -51,7 +49,7 @@
     <!-- Fin del header -->
     <!-- Inicio del main -->
     <main class="nosotros">
-        <h2>Sobre<br>Nosotros</h2>
+        <h1>Sobre<br>Nosotros</h1>
         
         <p>Hace más de tres décadas, en el corazón de la bulliciosa ciudad, un apasionado amante de la cocina italiana decidió dar vida a su sueño de compartir auténticas delicias italianas con la comunidad. Así nació Pizzería Bella Napoli, un rincón acogedor que ha tejido su historia en el tejido mismo de la ciudad.</p>
         <p>En 1988, Giuseppe "Pepe" Rossi, un chef italiano con un amor apasionado por la pizza, decidió abrir las puertas de Bella Napoli en un pequeño local con aroma a tomate y albahaca. Con sus recetas familiares y una devoción por la calidad, Pepe creó un lugar donde las personas podían saborear la auténtica esencia de la cocina italiana.</p>
@@ -64,12 +62,12 @@
     <!-- Inicio del footer -->
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-          <li class="nav-item"><a href="../pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-          <li class="nav-item"><a href="../pages/productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
-          <li class="nav-item"><a href="../pages/faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-          <li class="nav-item"><a href="../pages/nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
-        </ul>
+            <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
+            <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+            <li class="nav-item"><a href="./productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
+            <li class="nav-item"><a href="./faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+            <li class="nav-item"><a href="./nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
+          </ul>
         <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
       </footer>
     <!-- Fin del footer -->
