--- a/pages/productos.html
+++ b/pages/productos.html
@@ -4,8 +4,6 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Bella Napoli</title>
-    <!-- El link con CSS -->
-    <link rel="stylesheet" href="../css/style.css">
     <!-- El link de Google Fonts (Pacifico) -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,6 +11,8 @@
     <!-- El link de Bootstrap -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
     <link rel="icon" href="../img/pizza-logo.png" type="image/x-icon">
+    <!-- El link con CSS -->
+    <link rel="stylesheet" href="../css/style.css">
 </head>
 <body>
     <!-- Inicio del header -->
@@ -32,16 +32,16 @@
                             <a class="nav-link" href="../index.html">Inicio</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/productos.html">Productos</a>
+                            <a class="nav-link" href="./productos.html">Productos</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/nosotros.html">Nosotros</a>
+                            <a class="nav-link" href="./nosotros.html">Nosotros</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/contacto.html">Contacto</a>
+                            <a class="nav-link" href="./contacto.html">Contacto</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="../pages/faq.html">FAQ</a>
+                            <a class="nav-link" href="./faq.html">FAQ</a>
                         </li>
                     </ul>
                 </div>
@@ -51,13 +51,14 @@
     <!-- Fin del header -->
     <main class="product container">
 
-        <h2>Todas las pizzas</h2>
+        <h1>Todas las pizzas</h1>
 
         <div class="product-content">
             <div class="product-1">
                 <img  src="../img/margherita.jpg" alt="Pizza margherita en una tabla de madera">
                 <div class="product-txt">
                     <h3>Margherita</h3>
+                    <p class="margherita">Queso mozzarella, albahaca fresca y salsa</p>
                     <div class="price">
                         <p>$500</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -68,6 +69,7 @@
                 <img src="../img/cuatro-quesos.jpg" alt="Pizza cuatro quesos en una tabla de madera">
                 <div class="product-txt">
                     <h3>Cuatro quesos</h3>
+                    <p class="cuatro-quesos">Queso mozzarella, queso gorgonzola, queso provolone, queso parmesano</p>
                     <div class="price">
                         <p>$500</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -78,6 +80,7 @@
                 <img src="../img/barbacoa.jpg" alt="Pizza barbacoa en una tabla de madera">
                 <div class="product-txt">
                     <h3>Barbacoa</h3>
+                    <p>Queso mozzarella, salsa de barbacoa, cebolla roja en rodajas, hojas de cilantro fresco</p>
                     <div class="price">
                         <p>$500</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -88,6 +91,7 @@
                 <img src="../img/napolitana.jpg" alt="Pizza napolitana en una talba de madera">
                 <div class="product-txt">
                     <h3>Napolitana</h3>
+                    <p>Mozzarella fresca, orégano seco, aceite de oliva virgen extra, anchoas</p>
                     <div class="price">
                         <p>$500</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -98,6 +102,7 @@
                 <img src="../img/pepperoni.jpg" alt="Pizza pepperoni en una tabla de madera">
                 <div class="product-txt">
                     <h3>Pepperoni</h3>
+                    <p class="pepperoni">Queso mozzarella, pepperoni, orégano seco</p>
                     <div class="price">
                         <p>$500</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -108,6 +113,7 @@
                 <img src="../img/vegetariana.jpg" alt="Pizza vegetariana en una tabla de madera">
                 <div class="product-txt">
                     <h3>Vegetariana</h3>
+                    <p>Queso mozzarella, champiñones, cebolla, tomates cherry</p>
                     <div class="price">
                         <p>$500</p>
                         <a href="#" class="btn-2">Comprar</a>
@@ -122,10 +128,10 @@
     <footer class="py-3 my-4">
         <ul class="nav justify-content-center border-bottom pb-3 mb-3">
           <li class="nav-item"><a href="../index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-          <li class="nav-item"><a href="../pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-          <li class="nav-item"><a href="../pages/productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
-          <li class="nav-item"><a href="../pages/faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-          <li class="nav-item"><a href="../pages/nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
+          <li class="nav-item"><a href="./contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
+          <li class="nav-item"><a href="./productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
+          <li class="nav-item"><a href="./faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
+          <li class="nav-item"><a href="./nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
         </ul>
         <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
       </footer>
