--- a/index.html
+++ b/index.html
@@ -3,76 +3,90 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bella Napoli</title>
-    <!-- El link de Google Fonts (Pacifico) -->
+    <title>La Garse</title>
+    <!-- Link de la fuente de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap" rel="stylesheet">
-    <!-- El link de Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css">
-    <link rel="icon" href="./img/pizza-logo.png" type="image/x-icon">
-    <!-- El link con CSS -->
-    <link rel="stylesheet" href="./css/style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Bree+Serif&display=swap" rel="stylesheet">
+    <!-- Link del logo de encabezado -->
+    <link rel="icon" href="./img/logo.png" type="image/x-icon">
+    <!-- Link de página de iconos de redes -->
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/2.1.0/uicons-brands/css/uicons-brands.css'>
+    <!-- Link del css -->
+    <link rel="stylesheet" href="./css/styles.css">
 </head>
 <body>
-    <!-- Inicio del header -->
-    <header class="header">
-        <nav class="navbar bg-body-tertiary" data-bs-theme="dark">
-            <div class="container ">
-                <a class="navbar-brand" href="./index.html">
-                    <img src="./img/pizza-logo.png" alt="Bella Napoli" width="40" height="40">
-                </a>
-
-                <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarToggleExternalContent" aria-controls="navbarToggleExternalContent" aria-expanded="false" aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse" id="navbarToggleExternalContent">
-                    <ul class="nav justify-content-end links-inicio">
-                        <li class="nav-item">
-                            <a class="nav-link" href="./index.html">Inicio</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/productos.html">Productos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/nosotros.html">Nosotros</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/contacto.html">Contacto</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="./pages/faq.html">FAQ</a>
-                        </li>
+    <header>
+        <!-- Inicio del header -->
+        <nav>
+            <div class="header-nav">
+                <div class="logo">
+                    <a href="./index.html"><img src="./img/logo.png" class="logo-header" height="40px" alt="logo-arte"></a>
+                </div>
+                <div class="enlaces-header">
+                    <ul class="enlaces-header enlaces-h">
+                        <li><a class="enlaces-header" href="./index.html" target="_blank">Inicio</a></li>
+                        <li><a class="enlaces-header" href="./pages/nosotros.html" target="_blank">Nosotros</a></li>
+                        <li><a class="enlaces-header" href="./pages/artistas.html" target="_blank">Artistas</a></li>
+                        <li><a class="enlaces-header" href="./pages/eventos.html" target="_blank">Eventos</a></li>
+                        <li><a class="enlaces-header" href="./pages/obras.html" target="_blank">Obras</a></li>
                     </ul>
                 </div>
             </div>
         </nav>
+        <!-- Fin del header -->
     </header>
-    <!-- Fin del header -->
-    <!-- Inicio del main -->
-    <main class="index">
-        <h1>¡Bienvenidos a nuestro rincón de delicias donde la pasión por la pizza cobra vida!</h1> 
-        <p>En nuestro mundo culinario, cada rebanada es una obra maestra de sabor, textura y creatividad. Desde las clásicas recetas que te transportarán a las calles de Nápoles hasta las creaciones innovadoras que desafían los límites de la imaginación gastronómica, estamos aquí para llevarte en un viaje irresistible a través de la experiencia pizza.</p>
-        
-        <p>En nuestra pizzería, la calidad es la piedra angular de todo lo que hacemos. Desde los ingredientes más frescos hasta la masa perfectamente horneada, cada detalle se cuida con esmero para ofrecerte una experiencia única que deleitará tus sentidos. Ya sea que prefieras la simplicidad de una Margherita clásica o te aventures a probar combinaciones audaces y exquisitas, nuestro menú diverso tiene algo para cada amante de la pizza.</p>
-        
-        <p>Únete a nosotros en este viaje culinario donde cada bocado es un encuentro con la autenticidad y el sabor inigualable. En nuestra pizzería, la tradición se encuentra con la creatividad, y cada visita es una invitación a disfrutar de la mejor pizza, preparada con amor y devoción. ¡Bienvenidos a la casa de las pizzas, donde cada rebanada cuenta una historia de pasión y exquisitez!</p>
+    <main class="main">
+        <!-- Inicio del main -->
+        <p class="main-p">Bienvenido a <a href="#" target="_blank" class="p-link">La Garse</a>, un museo dedicado al arte, un santuario donde las vibrantes paletas de los artistas cobran vida, donde cada trazo es una ventana hacia el alma humana y donde la creatividad se convierte en un lenguaje universal. Desde los majestuosos frescos del Renacimiento hasta las audaces exploraciones de la era contemporánea, nuestro objetivo es transportarte a un mundo donde la imaginación es libre y la expresión es ilimitada.
+        Explora las maravillas del <a href="#" target="_blank" class="p-link">arte</a> en todas sus formas: desde la pintura y la escultura hasta la fotografía y el diseño digital. Sumérgete en las obras maestras que han resistido el paso del tiempo y descubre las visiones vanguardistas que desafían las convenciones establecidas. Te invitamos a explorar la riqueza y la diversidad del arte, a celebrar la belleza en todas sus manifestaciones y a conectar con la esencia misma de la humanidad.
+        Únete a nosotros en este viaje inspirador, donde cada obra es una puerta hacia nuevas emociones, ideas y perspectivas. Atrévete a soñar, a cuestionar y a descubrir el poder transformador del arte. ¡Bienvenido al fascinante mundo del arte, donde la imaginación no tiene límites y la belleza es eterna!</p>
+        <!-- Fin del main -->
     </main>
-    <!-- Fin del main -->
-    <!-- Inicio del footer -->
-    <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="./index.html" class="nav-link px-2 text-body-secondary">Inicio</a></li>
-          <li class="nav-item"><a href="./pages/contacto.html" class="nav-link px-2 text-body-secondary">Contacto</a></li>
-          <li class="nav-item"><a href="./pages/productos.html" class="nav-link px-2 text-body-secondary">Productos</a></li>
-          <li class="nav-item"><a href="./pages/faq.html" class="nav-link px-2 text-body-secondary">FAQs</a></li>
-          <li class="nav-item"><a href="./pages/nosotros.html" class="nav-link px-2 text-body-secondary">Nosotros</a></li>
-        </ul>
-        <p class="text-center text-body-secondary">© 2023 Company, Inc</p>
-      </footer>
-    <!-- Fin del footer -->
-    <!-- El script de JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-C6RzsynM9kWDrMNeT87bh95OGNyZPhcTNXj1NW7RuBCsyN/o0jlpcV8Qyq46cDfL" crossorigin="anonymous"></script>
+    <footer>
+        <!-- Inicio del footer -->
+        <div class="ftcontainer">
+            <div class="ftcontent">
+                <h2 class="titulo-footer">Sobre La Garse</h2>
+                <ul class="ftli">
+                    <li>
+                        <a href="./pages/nosotros.html" class="link-footer">La Garse y su historia en el mundo</a>
+                    </li>
+                    <li>
+                        <a href="./pages/reglas.html" class="link-footer">Reglas</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="ftcontent border-ft">
+                <h2 class="titulo-footer">Nuestros sitios</h2>
+                <ul class="ftli">
+                    <li>
+                        <a href="./pages/donacion.html" class="link-footer" target="_blank">Donar</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link-footer" target="_blank">Danos tu opinion</a>
+                    </li>
+                    <li>
+                        <a href="./pages/boletos.html" class="link-footer" target="_blank">Compra boleto</a>
+                    </li>
+                    <li>
+                        <a href="#" class="link-footer" target="_blank">Contacto</a>
+                    </li>
+                    <li>
+                        <a href="./pages/faq.html" class="link-footer" target="_blank">FAQ</a>
+                    </li>
+                </ul>
+            </div>
+            <div class="footer-social">
+                <h2 class="titulo-footer">Siguenos en nuestras redes</h2>
+                <a href="#" class="footersocial-link" target="_blank"><i class="fi fi-brands-instagram"></i></a>
+                <a href="#" class="footersocial-link" target="_blank"><i class="fi fi-brands-facebook"></i></a>
+                <a href="#" class="footersocial-link" target="_blank"><i class="fi fi-brands-twitter"></i></a>
+                <a href="#" class="footersocial-link" target="_blank"><i class="fi fi-brands-youtube"></i></a>
+            </div>
+        </div>
+        <p class="derechos-footer">Derechos de autor &copy; 2024 - Todos los derechos reservados</p>
+        <!-- Fin del footer -->
+    </footer>
 </body>
 </html>
-
