--- a/pages/obras.html
+++ b/pages/obras.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>La Garse</title>
+    <title>Document</title>
     <!-- Link de la fuente de Google Fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -40,16 +40,39 @@
 <!-- Fin del header -->
 </header>
 <main class="main">
-    <!-- Inicio del main -->
-    <h1 class="main-h1">Sobre<span class="span-titulo">Nosotros</span></h1>
-    <p class="main-p">En La Garse, estamos apasionados por el arte en todas sus formas. Nuestra misión es crear un espacio en línea donde los amantes del arte puedan reunirse, explorar y celebrar la creatividad en todas sus manifestaciones. <br>
-
-    Desde la pintura clásica hasta la vanguardia contemporánea, creemos que el arte tiene el poder de inspirar, educar y transformar. Nuestro equipo está formado por entusiastas del arte que están comprometidos en brindarte una experiencia enriquecedora y significativa a través de nuestro sitio web. <br>
-        
-    En La Garse, nos esforzamos por promover la diversidad y la inclusión en el mundo del arte, dando voz a artistas emergentes y resaltando las diversas expresiones culturales que enriquecen nuestra sociedad. <br>
-        
-    Únete a nosotros en nuestro viaje mientras exploramos la belleza y el significado detrás de cada obra de arte. Estamos emocionados de compartir esta pasión contigo y esperamos que encuentres inspiración y alegría en cada rincón.</p>
-    <!-- Fin del main -->
+    <h1 class="main-h1">Nuestras <span class="span-titulo"></span> Obras</h1>
+    <section>
+        <article>
+            <h2 class="main-h2">"Sueños Urbanos"</h2> 
+            <img class="arte-1" src="../img/pintura-ciudad-oleo.jpg" alt="Pintura oleo de una ciudad" height="300px">
+            <p class="main-p">Artista: Elena Montoya <br>
+            Descripción: "Sueños Urbanos" es una pintura al óleo que captura la vibrante energía de la vida en la ciudad. Con pinceladas audaces y una paleta de colores vibrantes, la artista Elena Montoya nos transporta a un paisaje urbano lleno de movimiento y vida. La interacción entre las luces y las sombras crea una sensación de profundidad y textura, mientras que los detalles cuidadosamente elaborados dan vida a la escena, invitando al espectador a sumergirse en su propio viaje por la ciudad.</p>
+        </article>
+        <article>
+            <h2 class="main-h2">"La Danza del Metal"</h2> 
+            <img class="arte-1" src="../img/escultura-metal.jpg" alt="Escultura de metal" height="400px" >
+            <p class="main-p">Artista: Maximiliano Rojas <br>
+            Descripción: "La Danza del Metal" es una escultura en metal abstracta que desafía las convenciones y provoca la reflexión. Con líneas fluidas y formas geométricas, el escultor Maximiliano Rojas crea una obra que parece estar en constante movimiento. La combinación de materiales y texturas añade una sensación de profundidad y dinamismo a la pieza, invitando al espectador a contemplarla desde diferentes ángulos y perspectivas.</p> 
+            </article>
+        <article>
+            <h2 class="main-h2">"Naturaleza en Reposo"</h2> 
+            <img class="arte-1" src="../img/naturaleza-muerta.jpg" alt="Naturaleza muerta" height="400px">
+            <p class="main-p">Artista: Clara García <br>
+            Descripción: "Naturaleza en Reposo" es una fotografía de naturaleza muerta que captura la belleza serena de la vida cotidiana. Con una composición cuidadosamente elaborada y una iluminación suave, la fotógrafa Clara García transforma objetos simples en obras de arte que invitan a la contemplación. Cada detalle está meticulosamente dispuesto, creando una sensación de armonía y equilibrio en la imagen.</p> 
+        </article>
+        <article>
+            <h2 class="main-h2">"El Laberinto de los Sueños"</h2> 
+            <img class="arte-1" src="../img/sueños-laberinto.jpg" alt="Obra digital, sueños laberinto" height="400px">
+            <p class="main-p">Artista: Mateo Vargas <br>
+            Descripción: "El Laberinto de los Sueños" es una obra de arte digital surrealista que desafía la lógica y la realidad. Con su enfoque único y su dominio de la tecnología digital, el artista Mateo Vargas crea un paisaje onírico lleno de misterio y fantasía. Las formas y los colores se funden en una danza hipnótica, transportando al espectador a un mundo de posibilidades infinitas.</p> 
+        </article>
+        <article>
+            <h2 class="main-h2">"Retrato de la Melancolía"</h2> 
+            <img class="arte-1" src="../img/esencia-humana.jpg" alt="Pintura acrilica, esencia humana" height="600px">
+            <p class="main-p">Artista: Alejandra Sánchez <br>
+            Descripción: "Retrato de la Melancolía" es una pintura acrílica que captura la esencia misma de la emoción humana. Con pinceladas hábiles y una sensibilidad única, la pintora Alejandra Sánchez crea un retrato expresivo que revela la profundidad y la complejidad del alma humana. La mirada melancólica del sujeto invita al espectador a reflexionar sobre la naturaleza de la tristeza y la belleza de la vulnerabilidad humana.</p>
+        </article>
+    </section> 
 </main>
 <footer>
     <!-- Inicio del footer -->
